--- a/app/d3plus.css
+++ b/app/d3plus.css
@@ -7,6 +7,7 @@
 
 .d3plus-tooltip {
   box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 3px;
+  z-index: 30;
   & .d3plus-tooltip-table {
     border-collapse: collapse;
     & .d3plus-tooltip-tbody {
